Make FindBugs happy