@@ -261,7 +261,7 @@ public class SpellChecker {
 
     private void increment(HashMap<String, Integer> map, String key) {
         Integer value = map.get(key);
-        value = new Integer(value == null ? 0 : value + 1);
+        value = Integer.valueOf(value == null ? 0 : value + 1);
         map.put(key, value);
         contextCount = 10;
     }
